[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 62.0
margin_bottom = 29.0
rect_scale = Vector2( 2, 2 )
text = "Score : "

[node name="TimeLabel" type="Label" parent="."]
margin_left = 850.0
margin_top = 15.0
margin_right = 894.0
margin_bottom = 29.0
rect_scale = Vector2( 2, 2 )
text = "Time : "

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
